--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                         </div>
                         <div class="project-main-links">
                             <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i class="fas fa-ellipsis-v"></i></button>
-                            <a href="" target="blank" class="btn-portfolio btn-icon btn-icon-xs"><i
+                            <a href="https://github.com/marie-bu/marie-bu/tree/master" target="blank" class="btn-portfolio btn-icon btn-icon-xs"><i
                                 class="fab fa-github"></i></a>
                         </div>
                     </div>
