--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <h3>Curriculum Vitae</h3>
                     <div>
                         <button class="btn-circle-cv btn-circle btn-circle-xs" id="open-cv"><i class="far fa-eye"></i></button>
-                        <a href="CV - Marie Burki.pdf" download  target="blank" class="btn-circle-cv btn-circle btn-circle-xs"><i class="fas fa-download"></i></a>
+                        <a href="CV_Marie_Burki.pdf" download  target="blank" class="btn-circle-cv btn-circle btn-circle-xs"><i class="fas fa-download"></i></a>
                     </div>
                 </div>
             </div>
@@ -74,22 +74,36 @@
                     <div class="cv-content-left">
                         <div class="cv-content-top">
                             <img src="pictures/profile.png" alt="">
+                            <div class="cv-content-top-links">
+                                <a href="https://marie-bu.github.io/marie-bu/" target="blank" class="btn-circle btn-circle-xs btn-circle-cv"><i class="fas fa-laptop"></i></a>
+                                <a href="https://github.com/marie-bu" target="blank" class="btn-circle btn-circle-xs btn-circle-cv"><i class="fab fa-github"></i></a>
+                                <a href="https://www.linkedin.com/in/marie-bu/" target="blank" class="btn-circle btn-circle-xs btn-circle-cv"><i class="fab fa-linkedin"></i></a>
+                            </div>
                         </div>
                         <div class="cv-content-left-contact">
-                            <h4>Marie Burki</h4>
-                            <p><i class="far fa-envelope"></i>marie.buerki@gmail.com</p>
-                            <p><i class="fab fa-github"></i>www.github.com/marie-bu</p>
+                            <h4>Contact</h4>
+                            <p><i class="fas fa-envelope"></i>marie.buerki@gmail.com</p>
                             <p><i class="fas fa-phone"></i>06 03 10 58 58</p>
                             <p><i class="fas fa-map-marker-alt"></i>1 rue des Lilas<br>74100, Annemasse</p>
                         </div>
                         <div class="cv-content-left-skills">
-                            <h4>Compétences</h4>
+                            <h4>Compétences techniques</h4>
                             <p>Javascript</p>
+                            <p>React</p>
                             <p>CSS3</p>
                             <p>HTML5</p>
                             <p>Sass</p>
                             <p>Accessibilité</p>
                             <p>Git et GitHub</p>
+                        </div>
+                        <div class="cv-content-left-qualities">
+                            <h4>Qualités professionnelles</h4>
+                            <p>Autonome</p>
+                            <p>Responsable</p>
+                            <p>Rigoureuse</p>
+                            <p>Créative</p>
+                            <p>Calme</p>
+                            <p>Communicative</p>
                         </div>
                         <div class="cv-content-left-lang">
                             <h4>Langues</h4>
@@ -99,7 +113,12 @@
                     </div>
                     <div class="cv-content-right">
                         <div class="cv-content-top">
-                            <h3>Développeuse<br>front-end</h3>
+                            <h3 class="light-uppercase">Marie Burki</h3>
+                            <h2>Développeuse front-end</h2>
+                            <p><i class="fas fa-search"></i>une alternance en contrat de professionnalisation <br>
+                                <i class="far fa-calendar-alt"></i>4j/semaine en entreprise pour environ 12 mois <br>
+                                <i class="fas fa-map-marker-alt"></i>en télé-travail ou à Annemasse et environs
+                            </p>
                         </div>
                         <div class="cv-content-right-dev">
                             <h4>Expérience dans le développement</h4>
