--- a/index.html
+++ b/index.html
@@ -87,14 +87,16 @@
                             <p><i class="fas fa-map-marker-alt"></i>1 rue des Lilas<br>74100, Annemasse</p>
                         </div>
                         <div class="cv-content-left-skills">
-                            <h4>Compétences techniques</h4>
+                            <h4>Compétences</h4>
                             <p>Javascript</p>
-                            <p>React</p>
+                            <p>React.js</p>
                             <p>CSS3</p>
                             <p>HTML5</p>
                             <p>Sass</p>
                             <p>Accessibilité</p>
                             <p>Git et GitHub</p>
+                            <p>WordPress</p>
+                            <p>Sensibilité pour l'UI/UX design</p>
                         </div>
                         <div class="cv-content-left-qualities">
                             <h4>Qualités professionnelles</h4>
@@ -115,13 +117,13 @@
                         <div class="cv-content-top">
                             <h3 class="light-uppercase">Marie Burki</h3>
                             <h2>Développeuse front-end</h2>
-                            <p><i class="fas fa-search"></i>une alternance en contrat de professionnalisation <br>
-                                <i class="far fa-calendar-alt"></i>4j/semaine en entreprise pour environ 12 mois <br>
-                                <i class="fas fa-map-marker-alt"></i>en télé-travail ou à Annemasse et environs
+                            <p><i class="fas fa-search"></i>un contrat de professionnalisation <br>
+                                <i class="far fa-calendar-alt"></i>4j/semaine en entreprise - 12 mois <br>
+                                <i class="fas fa-map-marker-alt"></i>en télé-travail ou Annemasse et environs
                             </p>
                         </div>
                         <div class="cv-content-right-dev">
-                            <h4>Expérience dans le développement</h4>
+                            <h4>Développement</h4>
                             <p>
                                 <span class="bold">Design et intégration de mon portfolio</span><br>
                                 <span class="light">Projet personnel - juin 2021 à juillet 2021</span><br>
@@ -149,7 +151,7 @@
                         <div class="cv-content-right-prior">
                             <h4>Expérience précédente</h4>
                             <p>
-                                <span class="bold">Dernier poste : serveuse puis responsable adjointe de bar</span><br>
+                                <span class="bold">Dernier poste : responsable de bar</span><br>
                                 <span class="light">Bruxelles Café, Lausanne, Suisse - mai 2017 à déc 2019</span>
                             </p>
                             <p>
@@ -158,10 +160,13 @@
                             </p>
                         </div>
                         <div class="cv-content-right-school">
-                            <h4>éducation</h4>
+                            <h4>Formations</h4>
                             <p>
-                                <span class="bold">Développement Front-end (1/3 du parcours)</span><br>
-                                <span class="light">OpenClassrooms - nov 2020 à avril 2021</span>
+                                <span class="bold">Développement Front-end</span><br>
+                                <span class="light">
+                                    Diplôme de niveau 6 (BAC+3/4)- enregistré au RNCP NSF 326t<br>
+                                    OpenClassrooms, en ligne - nov 2020 à avril 2021 - 1/3 du parcours
+                                </span>
                             </p>
                             <p>
                                 <span class="bold">Etudes bouddhiques</span><br>
@@ -240,26 +245,27 @@
         <section class="section" id="skills">
             <h3><span class="h1">Compétences</span><br>sur le parcours diplômant d'OpenClassrooms</h3>
             <p>
-                <span class="perso h3"><i class="fas fa-heart"></i>Personnelles</span>
                 <span class="done h3"><i class="fas fa-star"></i>Acquises</span>
                 <span class="to-do light h3"><i class="far fa-star"></i>À étudier</span>
+                <span class="perso h3"><i class="fas fa-heart"></i>Personnelles</span>
             </p>
             <ul>
-                <li class="perso"><i class="fas fa-heart"></i>Affinité avec l'UI design</li>
-                <li class="perso"><i class="fas fa-heart"></i>Sens du détail</li>
                 <li class="done"><i class="fas fa-star"></i>HTML5</li>
                 <li class="done"><i class="fas fa-star"></i>CSS3</li>
                 <li class="done"><i class="fas fa-star"></i>Sass</li>
                 <li class="done"><i class="fas fa-star"></i>Javascript</li>
+                <li class="done"><i class="fas fa-star"></i>React & React Router</li>
                 <li class="done"><i class="fas fa-star"></i>Accessibilité</li>
                 <li class="done"><i class="fas fa-star"></i>Git & GitHub</li>
                 <li class="to-do light"><i class="far fa-star"></i>Méthode Agile</li>
                 <li class="to-do light"><i class="far fa-star"></i>Conception d'interface</li>
-                <li class="to-do light"><i class="far fa-star"></i>React & React Router</li>
                 <li class="to-do light"><i class="far fa-star"></i>API & API REST</li>
                 <li class="to-do light"><i class="far fa-star"></i>Redux</li>
                 <li class="to-do light"><i class="far fa-star"></i>BDD & TDD</li>
                 <li class="to-do light"><i class="far fa-star"></i>Chrome Debugger</li>
+                <li class="perso"><i class="fas fa-heart"></i>WordPress</li>
+                <li class="perso"><i class="fas fa-heart"></i>Sensibilité pour l'UI/UX design</li>
+                <li class="perso"><i class="fas fa-heart"></i>Sens du détail</li>
             </ul>
         </section>
 
