--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
     
     <nav>
-        <a href="#profile" class="btn-stripe-cv cv btn-stripe"><i class="fas fa-user-alt"></i><span>Profile</span></a>
+        <a href="#profile" class="btn-stripe-cv cv btn-stripe"><i class="fas fa-user-alt"></i><span>Profil</span></a>
         <a href="#career" class="btn-stripe-career career btn-stripe"><i
                 class="fas fa-comment"></i><span>Parcours</span></a>
         <a href="#refer" class="btn-stripe-refer refer btn-stripe"><i
