new text career - new projetcts added

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
     
     <nav>
-        <a href="#profile" class="btn-stripe-cv cv btn-stripe"><i class="fas fa-user-alt"></i><span>Profil</span></a>
+        <a href="#profile" class="btn-stripe-cv profile btn-stripe"><i class="fas fa-user-alt"></i><span>Profil</span></a>
         <a href="#career" class="btn-stripe-career career btn-stripe"><i
                 class="fas fa-comment"></i><span>Parcours</span></a>
         <a href="#refer" class="btn-stripe-refer refer btn-stripe"><i
@@ -57,8 +57,8 @@
                 <div class="profile-about">
                     <h1>Marie Burki</h1>
                     <h2 class="light">Développeuse Front-end</h2>
-                    <h3>Mes langages<br><span class="light">HTML, CSS/SCSS, Javascript</span></h3>
-                    <h3>Mes intérêts<br><span class="light">UI/UX, Green IT, Clean Code</span></h3>
+                    <h3>Mes langages<br><span class="light">HTML | CSS | Javascript (& React)</span></h3>
+                    <h3>Mes intérêts<br><span class="light">UI/UX | Green IT | Clean Code</span></h3>
                 </div>
                 <div class="profile-buttons">
                     <h3>Curriculum Vitae</h3>
@@ -190,44 +190,24 @@
 
         <section class="section" id="career">
             <h3 class="before career-title active">Parcours antérieur</h3>
-            <p class="before career-text text active">De formation universitaire, j'étudiais
-                les langues et les civilisations orientales (l'Inde et le Bouddhisme particulièrement). J'ai toujours un
-                grand intérêt personnel pour ces sujets,
-                mais les études universitaires ne me plaisaient pas particulièrement.<br>
-                Comme je travaillais à côté comme serveuse et que j'aimais le dynamisme et le relationnel que
-                cela impliquait, j'ai préféré continuer dans cette voie : Mon dernier poste a été celui de
-                responsable adjointe d'un bar à bières belges à Lausanne, en Suisse.<br>
-                Mais, en 2019, l'arrivée de mon fils initia une réflexion sur mes envies et projets
-                professionnels à long terme.
-            </p>
-            <h3 class="change career-title">Pourquoi le développement
-                front-end ?
-            </h3>
-            <p class="change career-text text">Alors que je réfléchissais à ma reconversion, deux facteurs majeurs
-                m'amenèrent sur ma nouvelle voie.<br>
-                Tout d'abord, j'avais envie d'apprendre quelque chose de nouveau, de relever un défi, mais aussi de
-                pouvoir appliquer
-                concrètement mes nouvelles connaissances et d'être capable de créer quelque chose.<br>
-                Puis, après avoir fait le point sur mes expériences passées, j'ai voulu me rapprocher de la création
-                visuelle. En effet, j'avais adoré aider un ami lors de la création de son entreprise (logo, site,
-                réseaux sociaux...).
-                Idem lorsque j'étais chargée du compte Instagram
-                et du visuel des menus du dernier bar dans lequel j'avais travaillé.<br>
-                C'est ainsi que je me suis lancée dans l'apprentissage du développement front-end. Sans regret,
-                car depuis que j'ai commencé à coder, je découvre un métier que j'adore.
-            </p>
-            <h3 class="after career-title">Parcours de développeuse
-            </h3>
-            <p class="after career-text text">Fin 2020, je suis maman au foyer et j'entame le parcours diplômant de
-                développeur front-end d'OpenClassrooms pendant mon temps libre.<br>
-                Mais à un tiers du parcours, des contraintes de temps et d'argent me poussent à m'adapter et je
-                me dirige vers l'alternance pour le reste de la formation.<br>
-                Je mets celle-ci en pause et je me lance dans la réalisation de projets personnels : Je
-                commence par reprendre un site Wordpress que j'avais monté pour un ami il y a plusieurs années
-                et le refait de A à Z (je crée l'UI design et code le tout). Et puis je code ce site-ci, pour
-                présenter mon travail auprès des recruteurs et décrocher mon premier poste... Peut-être auprès
-                de vous?
-            </p>
+            <div class="before career-text text active">
+                <p>De formation universitaire, j'ai étudié les langues et les civilisations de l'Inde et du Tibet. Je garde un grand intérêt personnel pour ces sujets.</p>
+                <p>J'ai ensuite travaillé avec plaisir dans la restauration, pour le dynamisme et le relationnel que ça impliquait.</p>
+                <p>Mais au fil du temps, les opportunités d’être créative me manquaient de plus en plus et j’ai souhaité changer de métier. Je voulais également apprendre quelque chose de technique, un outil concret qui m’ouvrirait différentes possibilités d’évolution sur le long terme.</p>
+                <p>C'est ainsi que je me suis tournée vers le développement Front-end et j’ai tout de suite croché.</p>
+            </div>
+            <h3 class="change career-title">Parcous de développeuse</h3>
+            <div class="change career-text text">
+                <p>Je suis une dev passionnée, dotée d’une forte affinité pour l’UI/UX design. Je code tous les jours et j’ai pu rapidement évoluer grâce à une grande motivation et le plaisir d’apprendre.</p>
+                <p>En seulement quelques mois, je suis passée d’un niveau zéro à la création de ce portfolio, tout cela sur un temps libre très limité. Quant on aime, on ne compte pas... !</p>
+                <p>Le parcours de formation que j'ai suivi et l'aide de mon mentor m'ont permis de construire une base solide et structurée. C'est cela, couplé à ma forte capacité d'apprentissage et à mon autonomie, qui me permet de continuer d'apprendre par et pour moi-même, et de coder mes propres projets.</p>
+            </div>
+            <h3 class="after career-title">Projet professionnel</h3>
+            <div class="after career-text text">
+                <p>Aujourd’hui, je cherche à terminer mon parcours de formation en alternance, mais surtout à trouver une entreprise dans laquelle je me sente bien et avec laquelle j’ai envie de collaborer et d’évoluer sur le long terme.</p>
+                <p>En effet, j’aime que ce métier nous pousse à nous améliorer constamment, à apprendre toujours de nouvelles technos et de nouveaux langages.</p>
+                <p>Sur un plan plus personnel, je suis très sensible aux enjeux sociaux et environnementaux actuels. Dans ce domaine, le numérique pose bien sûr un certain nombre de problèmes, mais il permet également de proposer beaucoup de solutions : je trouve que c’est un environnement très stimulant et je me réjouis de travailler un jour en ce sens.</p>
+            </div>
         </section>
 
         <section class="section" id="refer">
@@ -271,6 +251,10 @@
 
         <section class="section" id="portfolio">
             <div class="btns">
+                <figcaption class="coverletter h3">
+                    <img src="pictures/coverletter.png" alt="">
+                    <caption>Cover letter</caption>
+                </figcaption>
                 <figcaption class="mon-portfolio h3">
                     <img src="pictures/portfolio.png" alt="">
                     <caption>Portfolio</caption>
@@ -278,6 +262,10 @@
                 <figcaption class="ecoarava h3">
                     <img src="pictures/ecoarava.png" alt="">
                     <caption>Eco Arava</caption>
+                </figcaption>
+                <figcaption class="petitsplats h3">
+                    <img src="pictures/petitsplats.png" alt="">
+                    <caption>Les petits plats</caption>
                 </figcaption>
                 <figcaption class="fisheye h3">
                     <img src="pictures/fisheye.png" alt="">
@@ -298,6 +286,37 @@
             </div>
 
             <div class="modal-bg" id="modal-project">
+                <div class="coverletter project">
+                    <button class="btn-circle-portfolio btn-circle btn-circle-xs close-project"><i class="fas fa-times"></i></button>
+                    <div class="project-main">
+                        <div class="project-main-title">
+                            <h4 class="h1">Cover letter</h4>
+                            <h5>Conception et réalisation d'une page web</h5>
+                            <h5 class="light">Projet personnel</h5>
+                        </div>
+                        <img src="pictures/coverletter.png" alt="" class="project-img">
+                    </div>
+                    <div class="project-details">
+                        <p>Pour ce projet, j'ai souhaité créer une interface très simple qui permette d'accéder à une lettre de motivation personnalisée, à l'aide d'un code envoyé lors d'une candidature.<br>
+                            J'ai choisi d'utiliser React afin de m'entraîner à utiliser ce framework.
+                        </p>
+                        <div class="project-details-skills">
+                            <h5><i class="fas fa-tools"></i>Compétences</h5>
+                            <ul>
+                                <li>UI design</li>
+                                <li>Création de contenu</li>
+                                <li>React</li>
+                            </ul>
+                        </div>
+                        <div class="project-details-links">
+                            <a href="https://github.com/marie-bu/motivationLetter-ReactApp" target="blank"
+                                class="btn-circle-portfolio btn-circle btn-circle-xs"><i class="fab fa-github"></i></a>
+                            <a href="https://marie-bu.github.io/motivationLetter-ReactApp/" target="blank"
+                                class="btn-circle-portfolio btn-circle btn-circle-xs"><i class="fas fa-external-link-alt"></i></a>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="mon-portfolio project">
                     <button class="btn-circle-portfolio btn-circle btn-circle-xs close-project"><i class="fas fa-times"></i></button>
                     <div class="project-main">
@@ -366,6 +385,41 @@
                             <a href="https://github.com/marie-bu/EcoArava" target="blank"
                                 class="btn-circle-portfolio btn-circle btn-circle-xs"><i class="fab fa-github"></i></a>
                             <a href="https://marie-bu.github.io/EcoArava/" target="blank"
+                                class="btn-circle-portfolio btn-circle btn-circle-xs"><i
+                                    class="fas fa-external-link-alt"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="petitsplats project">
+                    <button class="btn-circle-portfolio btn-circle btn-circle-xs close-project"><i class="fas fa-times"></i></button>
+                    <div class="project-main">
+                        <div class="project-main-title">
+                            <h4 class="h1">Les petits plats</h4>
+                            <h5>Développer un algorithme de recherche en Javascript</h5>
+                            <h5 class="light">Projet OpenClassrooms</h5>
+                        </div>
+                        <img src="pictures/petitsplats.png" alt="" class="project-img">
+                    </div>
+                    <div class="project-details">
+                        <p>Ce projet est axé sur l'approfondissement des connaissances en Javascript,
+                            particulièrement la compréhension des différents algorithmes de tri, l'optimisation des fonctions (Big 0), la résolution de problèmes.<br>
+                            Le fonctionnement voulu du tri est le suivant : Une recherche dans la barre principale trie les recettes affichées et les dropbox. La recherche peut être affinée à travers les dropbox par un système de tags, qui apparaissent au clique de la souris.
+                        </p>
+                        <div class="project-details-skills">
+                            <h5><i class="fas fa-tools"></i>Compétences</h5>
+                            <ul>
+                                <li>Javascript</li>
+                                <li>Big O</li>
+                                <li>CSS3</li>
+                                <li>Sass</li>
+                                <li>HTML5</li>
+                            </ul>
+                        </div>
+                        <div class="project-details-links">
+                            <a href="https://github.com/marie-bu/MarieBurki_7_02042021" target="blank"
+                                class="btn-circle-portfolio btn-circle btn-circle-xs"><i class="fab fa-github"></i></a>
+                            <a href="https://marie-bu.github.io/MarieBurki_7_02042021/" target="blank"
                                 class="btn-circle-portfolio btn-circle btn-circle-xs"><i
                                     class="fas fa-external-link-alt"></i></a>
                         </div>
