change text project

--- a/index.html
+++ b/index.html
@@ -403,8 +403,7 @@
                     </div>
                     <div class="project-details">
                         <p>Ce projet est axé sur l'approfondissement des connaissances en Javascript,
-                            particulièrement la compréhension des différents algorithmes de tri, l'optimisation des fonctions (Big 0), la résolution de problèmes.<br>
-                            Le fonctionnement voulu du tri est le suivant : Une recherche dans la barre principale trie les recettes affichées et les dropbox. La recherche peut être affinée à travers les dropbox par un système de tags, qui apparaissent au clique de la souris.
+                            particulièrement la compréhension des différents algorithmes de tri, l'optimisation des fonctions (Big 0), la résolution de problèmes.
                         </p>
                         <div class="project-details-skills">
                             <h5><i class="fas fa-tools"></i>Compétences</h5>
